fixed content clipping issue on larger screen

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ p {
 
   header {
     width: 100%;
-    height: 50%;
+    min-height: 50%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -96,17 +96,18 @@ p {
 
   article {
     width: 100%;
-    height: 50%;
+    min-height: 50%;
     background-color: 1b1b1b;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
+    align-items: flex-start;
   }
 
   section {
     width: 20%;
     height: fit-content;
-    margin-top: 30px;
+    margin-top: 40px;
     color: white;
   }
 }
